--- a/index.html
+++ b/index.html
@@ -1,2 +1,5 @@
 <h1>Test commit 1 to main branch</h1>
 <p>Test commit 2 to main branch</p>
+<ol>
+    <li>Test commit 3 to main - enabled github pages</li>
+</ol>
