--- a/index.html
+++ b/index.html
@@ -2,4 +2,5 @@
 <p>Test commit 2 to main branch</p>
 <ol>
     <li>Test commit 3 to main - enabled github pages</li>
+    <li>created new 'test' branch from main</li>
 </ol>
