test cmmit nto test

--- a/index.html
+++ b/index.html
@@ -3,4 +3,5 @@
 <ol>
     <li>Test commit 3 to main - enabled github pages</li>
     <li>created new 'test' branch from main</li>
+    <li>Test commit 1 to test</li>
 </ol>
